# boids-sfml

./: CMakeLists.txt
src/: boidTools.hpp  main.cpp  testBoidTools.cpp
